--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "bulma": "^0.9.0",
+    "ngx-markdown": "^10.0.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.17.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
