--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
-    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bulma": "^0.9.0",
     "ngx-markdown": "^10.0.0",
     "rxjs": "~6.5.5",
