--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salvae-web",
+  "name": "elorama-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,33 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.9",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
-    "@ngx-loading-bar/core": "^5.1.0",
-    "@ngx-loading-bar/http-client": "^5.1.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "bulma": "^0.9.0",
-    "ngx-color-picker": "^12.0.0",
-    "ngx-markdown": "^10.0.0",
-    "rxjs": "~6.5.5",
-    "sweetalert2": "^9.17.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^16.0.3",
+    "@angular/common": "^16.0.3",
+    "@angular/compiler": "^16.0.3",
+    "@angular/core": "^16.0.3",
+    "@angular/fire": "^7.5.0",
+    "@angular/forms": "^16.0.3",
+    "@angular/platform-browser": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
+    "@angular/router": "^16.0.3",
+    "@ngx-loading-bar/http-client": "^6.0.2",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "bulma": "^0.9.4",
+    "marked": "^4.3.0",
+    "ngx-color-picker": "^14.0.0",
+    "ngx-markdown": "^16.0.0",
+    "rxjs": "^7.8.1",
+    "sweetalert2": "^11.7.5",
+    "tslib": "^2.5.2",
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.8",
-    "@angular/cli": "^15.2.8",
-    "@angular/compiler-cli": "^15.2.9",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler-cli": "^16.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/marked": "^4.3.0",
+    "@types/node": "^20.2.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -47,8 +49,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.8.4"
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "~5.0.4"
   }
 }
